tekton/query-backend/oc_manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-observai-query-api
  namespace: observai-pipeline
spec:
  selector:
    app: observai-query-api
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
